2011-05-19	Gedare Bloom <giddyup44@yahoo.com>

	* user/conf.t: Fix typos.

2011-05-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Add SMP Configuration parameters.

2011-05-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Slight rework to deemphasize not using confdefs.h

2011-05-12	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* index.html.in, common/opengroup_manpage_acknowledgement.texi,
	common/opengroup_preface_acknowledgement.texi: New dates.

2011-04-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1782/cpukit
	* porting/taskcontext.t: Disable deferred FPU context switches when SMP
	is enabled. Per code tracking of deferred contexts is not
	implemented.

2011-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems_footer.html.in, common/cpright.texi: Update dates in copyright.

2011-03-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ada_user/.cvsignore: Add missing files.

2011-03-16	Jennifer Averett <jennifer.averett@OARcorp.com>

	PR 1743/cpu
	* user/conf.t: Add Simple Priority Scheduler as complement to existing
	Deterministic Priority Scheduler. This scheduler serves both as an
	example and as a lighter weight implementation for smaller systems.

2011-03-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1752/doc
	* cpu_supplement/.cvsignore, cpu_supplement/Makefile.am,
	cpu_supplement/cpu_supplement.texi: Remove TI C4x CPU Supplement
	chapter.
	* cpu_supplement/tic4x.t: Removed.

2011-03-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ada_user/Makefile.am: Add ObjectId pdf files.

2011-03-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Rename RTEMS_API into _RTEMS_API.

2011-03-04	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1744/doc
	* user/clock.t: rtems_clock_time_value type uses changed to struct
	timeval.

2011-02-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* setup.def, shell/preface.texi: Bump to 4.10.99.0

2011-02-17	Joel Sherrill <joel.sherrill@oarcorp.com>
